# pypam_netapprove

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: DECISIONS.md  DEMO.md  DEPLOY.md  PHASE2_TESTING.md
examples/: config.toml  pam_sudotest
scripts/: gen_relay_cert.sh  smoke_phase3.py
src/netapprove_approver/: __init__.py  cli.py
src/netapprove_core/: __init__.py  challenge.py  crypto.py  enroll.py  keystore.py  replay.py  verifier.py
src/netapprove_pam/: __init__.py  audit.py  backends.py  client.py  config.py  decision.py  pam_netapprove.py  session.py
src/netapprove_relay/: __init__.py  app.py
tests/: test_backends.py  test_challenge.py  test_crypto.py  test_decision.py  test_e2e_relay.py  test_keystore.py  test_pam_entrypoint.py  test_replay.py  test_session.py  test_verifier.py
